2007-01-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/smooth/src/engine/smooth_gtk2_drawing.c:
	(do_smooth_draw_box): Correct RTL locales.

2007-01-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/smooth/src/engine/smooth_gtk2_drawing.c:
	(do_smooth_draw_box):
	Fix division by zero bug in smooth (Bug 395193, Stuart Whitman)
	also switch the highlighted side for inverted scales

2007-01-10  Thomas Wood  <thos@gnome.org>

	* themes/Mist/gtk-2.0/gtkrc: Fix a spacing issue in the menus

2007-01-09  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/lua/src/draw_lib.c: (alpha), (shade):
	* engines/lua/src/lua_style.c: (lua_style_prepare_lua),
	(lua_style_prepare_cairo), (lua_style_close_cairo):

	Some C89 fixes for lua from TFKyle.

2007-01-09  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_menuitem):
	- Draw the border around the whole menuitem including the sides.

2007-01-08  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:

	Updated for 2.9.1 release

2007-01-08  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/Makefile.am:
	- Add DIST_SUBDIRS with all subdirs. This fixes make distcheck.

2007-01-08  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_progressbar_trough),
	(clearlooks_draw_progressbar_fill):
	- Added save/restore to _trough.
	- Sanity check for the radius in _trough.
	- Radius support for the fill.

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	- Again adjust the clip region differently. Only one pixel now, but
	in both direction if it is pulsing.

	* engines/support/cairo-support.c: (ge_cairo_rounded_rectangle):
	- Use cairo_rectangle if no corner is set.
	- Fix bug causing too many warnings 

2007-01-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/Makefile.am:
	* engines/clearlooks/src/clearlooks_draw_glossy.c: